Fixed responsive overflow issue

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ main
 {
       background: #000000;
       width: 100%;
-      height: 100%;
+      min-height: 100vh;
       color: white;
       padding: 2rem;
 
@@ -107,6 +107,7 @@ main h1
       justify-content: center;
       margin-top: 2rem;
       gap: 1rem;
+      flex-wrap:wrap;
 }
 
 .card 
@@ -117,7 +118,8 @@ main h1
       flex-direction: column;
       align-items: start;
       gap: 1rem;
-      width: 350px;
+      flex:1 1 350px;
+      max-width: 350px;
       background-color: #141414;
       border-radius: 10px;
      
